--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>
 <a id="guozhaoqinggithubio" class="anchor" href="#guozhaoqinggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>guozhaoqing.github.io</h1>
 
-<p>guoguo的博客</p>
+<p>我儿小鹏在哪里，爹爹一直很想你！</p>
       </section>
 
       <footer>
