--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       $(document).ready(function () {
         $('#main_content').headsmart()
       })
+      myson=function(){
+        alert("啦啦啦，啦啦啦！");
+      }
     </script>
     <title>Guozhaoqing.GitHub.io by guozhaoqing</title>
   </head>
@@ -48,7 +51,7 @@
         <h1>
 <a id="guozhaoqinggithubio" class="anchor" href="#guozhaoqinggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>guozhaoqing.github.io</h1>
 
-<p>我儿小鹏在哪里，爹爹一直很想你！</p>
+<p onclick="myson()">我儿小鹏在哪里，爹爹一直很想你！</p>
       </section>
 
       <footer>
