--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1>
 <a id="guozhaoqinggithubio" class="anchor" href="#guozhaoqinggithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>guozhaoqing.github.io</h1>
 
-<p onclick="myson()">我儿小鹏在哪里，爹爹一直很想你！</p>
+<p >我儿小鹏在哪里，爹爹一直很想你！</p><button onclick="myson()">点我</button>
       </section>
 
       <footer>
