--- a/index.html
+++ b/index.html
@@ -26,25 +26,106 @@
   .main-image img{
         border-radius: 110px;
   }
+  p{
+    font-family: 华文行楷;
+    font-size: 23px;
+    color: #736060;
+  }
+  .test{
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+    
+  }
+  .first{
+    background-color: #d44141;
+  }
+  .second{
+    background-color: #ea781c;
+    left: 83px;
+    top: 146px;
+  }
+  .third{
+    background-color:#dfe034;
+    left: 8px;
+    top: 221px;
+  }
+  .fourth{
+    background-color:#099018;
+    left: 83px;
+    top: 296px;
+  }
+  .fifth{
+    background-color:#3cd67f;
+    left: 8px;
+    top: 371px;
+  }
+  .sixth{
+    background-color:#2580da;
+    left: 83px;
+    top: 446px;
+  }
+  .seventh{
+    background-color:#a054ca;
+    left: 8px;
+    top: 521px;
+  }
+  .test a{
+    position: absolute;
+    top: 42%;
+    left: 34%;
+  }
+ 
+  div img{
+    max-width:170px;
+    top: 20px;
+    overflow:hidden;
+  }
 
   </style>
   <script type="text/javascript"></script>
   <body class="body">
     <section class="main-image">
-      <img src="timg.jpg">
+      <img src="timg.jpg">     
     </section>
 
-    <section class="main-content">
     
-    <p>！</p>
-      <a href="page/java.html">aaaa</a>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;鱼鱼鱼的博客：</p>
 
-      <footer class="site-footer">
+<div class="mian-context">
+
+  <div class="test first">
+    <!--<img src="Koalass.jpg">-->
+     <a href="page/java.html" class="first">JAVA</a>
+  </div>
+  <div class="test second">
+     <a href="js.html" class="second">JS</a>
+  </div>
+  <div class="test third">
+     <a href="">框架</a>
+  </div>
+  <div class="test fourth">
+     <a href="">随笔</a>
+  </div>
+  <div class="test fifth">
+     <a href="">待续</a>
+  </div>
+  <div class="test sixth">
+     <a href="">...</a>
+  </div>
+  <div class="test seventh">
+     <a href="">...</a>
+  </div>
+
+</div>
+
+      <footer class="main-footer">
 
       </footer>
 
-    </section>
 
   
   </body>
 </html>
+
