--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
     top: 521px;
   }
   .test a{
+    font-family: 华文行楷;
     position: absolute;
     top: 42%;
-    left: 34%;
+    left: 39%;
+    text-decoration:none;
+    color: #4e3535;
   }
  
   div img{
@@ -100,16 +103,16 @@
      <a href="page/java.html" class="first">JAVA</a>
   </div>
   <div class="test second">
-     <a href="js.html" class="second">JS</a>
+     <a href="page/js.html" class="second">JS</a>
   </div>
   <div class="test third">
-     <a href="">框架</a>
+     <a href="page/frame.html">框架</a>
   </div>
   <div class="test fourth">
-     <a href="">随笔</a>
+     <a href="page/essay.html">随笔</a>
   </div>
   <div class="test fifth">
-     <a href="">待续</a>
+     <a href="page/other.html">待续</a>
   </div>
   <div class="test sixth">
      <a href="">...</a>
