--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ transition:width 2s, height 2s;
   }
  
   div img{
-    max-width:170px;
+1    max-width:170px;
     top: 20px;
     overflow:hidden;
   }
@@ -133,7 +133,7 @@ transition:width 2s, height 2s;
 
   <div class="test first">
     <!--<img src="Koalass.jpg">-->
-     <a href="page/java.html" class="first">JAVA</a>
+     <a href="page/java1.html" class="first">JAVA</a>
   </div>
   <div class="test second">
      <a href="page/js.html" class="second">JS</a>
