--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-	<link rel="stylesheet" href="../stylesheets/mycss.css" type="text/css" />
+	<link rel="stylesheet" href="../page/mycss.css" type="text/css" />
   </head>
   <style type="text/css">
   .body{
