--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   <div class="test first">
     <!--<img src="Koalass.jpg">-->
-     <a href="page/java.html" class="first">JAVA</a>
+     <a href="page/java1.html" class="first">JAVA</a>
   </div>
   <div class="test second">
      <a href="page/js.html" class="second">JS</a>
