--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
      <a href="page/essay.html">Essay</a>
   </div>
   <div class="test fifth">
-     <a href="page/other.html">...</a>
+     <a href="page/mongodb1.html">Sql</a>
   </div>
   <div class="test sixth">
      <a href="">Resume</a>
