Update and rename test.html to java.html

--- a/java.html
+++ b/java.html
@@ -75,10 +75,28 @@
   <body >
     <div class="md-modal md-effect-18" id="modal-18">
       <div class="md-content">
-          <a href="">JAVA数组</a></br>
-          <a href="">JAVA集合详解1</a></br>
-          <a href="">JAVA集合详解2</a></br>
-          <a href="">JAVA集合总结</a></br>
+          <a href="page/java1.html">JAVA数组</a><br>
+          <a href="page/java2.html">JAVA集合详解1</a><br>
+          <a href="page/java3.html">JAVA集合详解2</a><br>
+          <a href="page/java4.html">JAVA集合总结</a><br>
+          <button class="md-close">Close me!</button>
+      </div>
+    </div>
+	<div class="md-modal md-effect-18" id="modal-17">
+      <div class="md-content">
+          <a href="">JAVA数组</a><br>
+          <a href="">JAVA集合详解1</a><br>
+          <a href="">JAVA集合详解2</a><br>
+          <a href="">JAVA集合总结</a><br>
+          <button class="md-close">Close me!</button>
+      </div>
+    </div>
+	      <div class="md-modal md-effect-18" id="modal-16">
+      <div class="md-content">
+          <a href="">JAVA数组</a><br>
+          <a href="">JAVA集合详解1</a><br>
+          <a href="">JAVA集合详解2</a><br>
+          <a href="">JAVA集合总结</a><br>
           <button class="md-close">Close me!</button>
       </div>
     </div>
@@ -86,14 +104,14 @@
     <div class="container" >
   <div class="left"></div>
   <div class="down"></div>
-  <a href="#" class="book book1 md-trigger md-setperspective" data-modal="modal-18">
+  <a href="#" class="book book1 md-trigger md-setperspective" data-modal="modal-17">
     <div class="bname"><div>T</div><div>O</div><div>M</div><div>C</div><div>A</div>T学习</div>
   </a>
   <a href="#" class="book book2 md-trigger md-setperspective" data-modal="modal-18">
     <div class="bname">集合学习</div>
   </a>
-  <a href="#" class="book book3">
-    <div class="bname"></div>
+  <a href="#" class="book book3" data-modal="modal-16">
+    <div class="bname"><div>J</div><div>A</div><div>V</div><div>A</div>基础内容</div>
   </a>
   <a href="#" class="book book4">
     <div class="bname"></div>
