--- a/java.html
+++ b/java.html
@@ -110,7 +110,7 @@
   <a href="#" class="book book2 md-trigger md-setperspective" data-modal="modal-18">
     <div class="bname">集合学习</div>
   </a>
-  <a href="#" class="book book3" data-modal="modal-16">
+  <a href="#" class="book book3 md-trigger md-setperspective" data-modal="modal-16">
     <div class="bname"><div>J</div><div>A</div><div>V</div><div>A</div>基础内容</div>
   </a>
   <a href="#" class="book book4">
